k8s/deployment.storybook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixtab-storybook
  namespace: <NAMESPACE>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fixtab-storybook
  template:
    metadata:
      labels:
        app: fixtab-storybook
    spec:
      containers:
        - name: fixtab-storybook
          ports:
            - containerPort: 80
          image: <IMAGE>
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 50Mi
      imagePullSecrets:
        - name: image-pull-secret-mbs-git

---
apiVersion: v1
kind: Service
metadata:
  name: fixtab-storybook-network
  namespace: <NAMESPACE>
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 80
  selector:
    app: fixtab-storybook

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixtab-storybook-ingress
  namespace: <NAMESPACE>
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - <DOMAIN_NAME>
      secretName: tls-secret-fixtab-storybook
  rules:
    - host: <DOMAIN_NAME>
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: fixtab-storybook-network
                port:
                  number: 80
